--- a/pages/baseConverter.html
+++ b/pages/baseConverter.html
@@ -40,7 +40,13 @@ input {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
+.converter select, .converter input {
+    width: calc(50% - 10px);
+    padding: 10px;
+    margin: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
 button {
     padding: 10px 20px;
     background-color: #007BFF;
